fix planner homework description tooltips being cut off by empty cells when 'Darken boxes with all work completed' enabled

--- a/app/planner/PlannerHomeworkItem.styl
+++ b/app/planner/PlannerHomeworkItem.styl
@@ -31,6 +31,7 @@
 		bottom: 100%
 		left: -25%
 		margin-bottom: 0.25rem
+		z-index: 1
 
 		background: white
 		border: solid 1px #cccccc
